--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<title>CountPlay</title>
 </head>
 <body>
-
+	<video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+		<source src="mp4/placeholder.mp4" type="video/mp4">
+	</video>
 </body>
 </html>
