Content at the bottom of the video

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	</video>
 
 	<div class="content">
+		<h1>Tempo Restante: XX:XX</h1>
 		<button id="btn" onclick="videoPlayPause()">Pause</button>
 	</div>
 
