Add defineTime and StartCount buttons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<div class="content">
 		<h1>Tempo Restante: XX:XX</h1>
 		<button id="btn-video" class="btn" onclick="videoPlayPause()">Pausar Vídeo</button>
+		<button id="btn-time" class="btn" onclick="defineTime()">Definir Tempo</button>
+		<button id="btn-cont" class="btn" onclick="">Iniciar Contagem</button>
 	</div>
 
 <script>
