Fix: Incorrect access to the video file
Resolves: #3

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<video id="bgvideo" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-		<source src="mp4/placeholder.mp4" type="video/mp4">
+		<source src="video/placeholder.mp4" type="video/mp4">
 	</video>
 
 	<div class="content">
